backtracking: resolved 40. Combination Sum II;